--- a/CTC_API/CTC_API/appsettings.json
+++ b/CTC_API/CTC_API/appsettings.json
@@ -6,4 +6,7 @@
     }
   },
   "AllowedHosts": "*"
+  "ConnectionStringsStrings": {
+    "ctc_dev_DBConnection": "Server=localhost;Database=ctc_dev;Trusted_Connection=True;"
+  }
 }
